kubernetes/fluxcd/apps/base/esphome/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`esphome.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: esphome
          port: 6052
    - match: Host(`esphome.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: esphome
          port: 6052
    - match: Host(`esp.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: esphome
          port: 6052
  tls:
    secretName: certificate-secret
